# llm-inference-hard-way

./: AGENTS.md  README.md  main.py  pyproject.toml  step1_download_model.ipynb  step2_tokenizer.ipynb  step3_embeddings.ipynb  step4a_attention.ipynb
